--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.6.0",
+    "material-ui": "^0.20.0",
     "react": "^16.0.0",
     "react-albus": "^2.0.0",
     "react-dom": "^16.0.0",
