--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "firebase": "^4.6.0",
     "material-ui": "^0.20.0",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-albus": "^2.0.0",
     "react-dom": "^16.0.0",
