--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "firebase": "^4.6.0",
+    "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
