--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-albus": "^2.0.0",
+    "react-cntdwn": "^0.3.0",
     "react-dom": "^16.0.0",
     "react-image": "^1.2.0",
     "react-image-file": "^0.1.0",
